2016-02-02 Yann LEYDIER <yann@leydier.info>
	* GUI (tree_selection_changed): Now displays lines, words and characters at
			page and view levels.
	* GUI (load_project): Fixed a crash when the project folder is not a valid
			Oriflamms project.

2016-02-01 Yann LEYDIER <yann@leydier.info>
	* View (ComputeFrontier): Now returns a straight line if no path is found.
	* GraphicalLine (ExtractFeatures): Bugfix.
	* View (AlignRange, AlignWordCharacters): Silently ignore text lines that
			are not associated to a GraphicalLine.

2016-01-26 Yann LEYDIER <yann@leydier.info>
	* orisig: Updated.
	* Document (AlignRange): Better warning messages.

2016-01-21 Yann LEYDIER <yann@leydier.info>
	* GraphicalLine (ExtractFeatures): Bugfix.

2015-12-14 Yann LEYDIER <yann@leydier.info>
	* View Impl (readZoneElements): Better error message.

2015-12-04 Yann LEYDIER <yann@leydier.info>
	* *: Replaced all occurrences of Gdk::Pixbuf::create_from_file() for
				optimization on Windows.

2015-12-03 Yann LEYDIER <yann@leydier.info>
	* ElementPosition (operator<, operator==): Added.
	* ValidationPanel ElementId: Now using ElementPosition.
	* ValidationPanel Element: Added to store tooltip.
	* ValidationPanel (add_element): Now takes the tooltip image as argument.

2015-12-02 Yann LEYDIER <yann@leydier.info>
	* GraphicalLine (ExtractFeatures): Bugfix.
	* GUI (overlay_changed): Lines' content is now realigned only if is was 
													 already aligned.
	* GUI (display_update_word): Characters are now realigned only if they were
															 already aligned.

2015-12-01 Yann LEYDIER <yann@leydier.info>
	* TEIImporter (fill_tree): <pb> does not require @facs anymore.

2015-11-30 Yann LEYDIER <yann@leydier.info>
	* Document (cstr, Save): Distances matrices are now saved in binary format.

2015-11-27 Yann LEYDIER <yann@leydier.info>
	* Document (readTextWElements): Added support for <lb> @type="rejet".

2015-11-26 Yann LEYDIER <yann@leydier.info>
	* GUI (go_to): Added.